feat(api): secrets management
implemented a interface SecretsManagement in pkg (anyone can use it), however internally there is a cassandra implementation of this, would like to experiment with how I actually test this without needing cassandra running

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
     depends_on:
       cassandra:
         condition: service_healthy
+    command:
+      ['go', 'run', 'cmd/api/main.go']
 volumes:
   db_data:
     driver: local
